<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="10dp"
    >
    
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#a3a3a3"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <LinearLayout
        android:id="@+id/keys_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/brackets_left"
                style="@style/btn_normal"
                android:text="@string/brackets0"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/brackets_right"
                style="@style/btn_normal"
                android:text="@string/brackets1"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/operator_0"
                style="@style/btn_normal"
                android:text="@string/operator0"
                android:onClick="clickMe"
                android:background="@color/btn_operation"
                />
            <Button
                android:id="@+id/back_space"
                style="@style/btn_normal"
                android:text="@string/operatorC"
                android:onClick="clickMe"
                android:background="@color/btn_operation"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/operator_1"
                style="@style/btn_normal"
                android:text="@string/operator1"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_7"
                style="@style/btn_normal"
                android:text="@string/num7"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_8"
                style="@style/btn_normal"
                android:text="@string/num8"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_9"
                style="@style/btn_normal"
                android:text="@string/num9"
                android:onClick="clickMe"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/operator_2"
                style="@style/btn_normal"
                android:text="@string/operator2"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_4"
                style="@style/btn_normal"
                android:text="@string/num4"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_5"
                style="@style/btn_normal"
                android:text="@string/num5"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_6"
                style="@style/btn_normal"
                android:text="@string/num6"
                android:onClick="clickMe"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/operator_3"
                style="@style/btn_normal"
                android:text="@string/operator3"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_1"
                style="@style/btn_normal"
                android:text="@string/num1"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_2"
                style="@style/btn_normal"
                android:text="@string/num2"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_3"
                style="@style/btn_normal"
                android:text="@string/num3"
                android:onClick="clickMe"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/operator_4"
                style="@style/btn_normal"
                android:text="@string/operator4"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_point"
                style="@style/btn_normal"
                android:text="@string/point"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/num_0"
                style="@style/btn_normal"
                android:text="@string/num0"
                android:onClick="clickMe"
                />
            <Button
                android:id="@+id/operator_5"
                style="@style/btn_normal"
                android:text="@string/operator5"
                android:onClick="clickMe"
                android:background="@color/btn_operation"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>